--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hello world!
+<html>
+  <video data-html5-video="" preload="metadata" src="blob:http://nowlive.club/3e5df73a-b42f-45d5-b846-1eba1c8a031d"><style class="clappr-style">[data-html5-video]{position:absolute;height:100%;width:100%;display:block}</style></video>
+</html>
