--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <video data-html5-video="" preload="metadata" src="blob:http://nowlive.club/3e5df73a-b42f-45d5-b846-1eba1c8a031d"><style class="clappr-style">[data-html5-video]{position:absolute;height:100%;width:100%;display:block}</style></video>
+ <iframe src="http://www.webtv.ws/embedd.php?live=spstream1&amp;vw=700&amp;vh=440" width="700" height="440" scrolling="no" frameborder="0" allowfullscreen="true" allowtransparency="true" id="thatframe" data-ruoheeqx-handled="1"></iframe>
 </html>
