--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 <html>
- <iframe src="http://www.webtv.ws/embedd.php?live=spstream1&amp;vw=700&amp;vh=440" width="700" height="440" scrolling="no" frameborder="0" allowfullscreen="true" allowtransparency="true" id="thatframe" data-ruoheeqx-handled="1"></iframe>
+ 
+ <head>
+ </head>
+ 
+ <body>
+  
+  <video width="320" height="240" controls>
+  <source src="http://bestbuyiptv.link:6969/live/iptvsantral@mail.com.tr/AlG8ncCwTm/11743.ts">
+  </video>
+  
+  
+ </body>
+ 
 </html>
