--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <body>
   
   <video width="320" height="240" controls>
-  <source src="http://bestbuyiptv.link:6969/live/iptvsantral@mail.com.tr/AlG8ncCwTm/11743.ts" type="video/ogg">
+  <source src="http://bestbuyiptv.link:6969/live/iptvsantral@mail.com.tr/AlG8ncCwTm/11743.ts" type="video/webm">
   </video>
   
   
