--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
  
  <body>
   
-  <video width="320" height="240" controls>
-  <source src="http://bestbuyiptv.link:6969/live/iptvsantral@mail.com.tr/AlG8ncCwTm/11743.ts" type="application/x-mpegURL">
-  </video>
+  <object type="application/x-vlc-plugin" data="http://server.example.com/video1.mpeg" width="400" height="300" id="video1">
+     <param name="movie" value="http://bestbuyiptv.link:6969/live/iptvsantral@mail.com.tr/AlG8ncCwTm/10174.ts"/>
+     <embed type="application/x-vlc-plugin" name="video1"
+     autoplay="no" loop="yes" width="800" height="600"
+     target="" />
+</object>
   
   
  </body>
