--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
  
  <body>
   
-  <object type="application/x-vlc-plugin" data="http://server.example.com/video1.mpeg" width="400" height="300" id="video1">
+  <object type="application/x-vlc-plugin" data="http://bestbuyiptv.link:6969/live/iptvsantral@mail.com.tr/AlG8ncCwTm/10174.ts" width="800" height="600" id="video1">
      <param name="movie" value="http://bestbuyiptv.link:6969/live/iptvsantral@mail.com.tr/AlG8ncCwTm/10174.ts"/>
      <embed type="application/x-vlc-plugin" name="video1"
-     autoplay="no" loop="yes" width="800" height="600"
+     autoplay="yes" loop="yes" width="800" height="600"
      target="" />
 </object>
   
